- keep the right scrollbar for the time being (to avoid resizing & overlapping when it shows) - Add a few missing legend entries assignments
git-svn-id: http://root.cern.ch/svn/root/trunk@47279 27541ba8-7e3a-0410-8455-c3a389f83636

--- a/js/JSRootIO/style/JSRootInterface.css
+++ b/js/JSRootIO/style/JSRootInterface.css
@@ -36,6 +36,7 @@ p { margin-top: 6px; padding: 0 10px 1em; }
    left: 35%;
    right: 3px;
    overflow: auto;
+   overflow-y: scroll;
    font-size:9pt;font-weight:normal;color:#191970;
 }
 
